scheduler fixed nasty flicker bug

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -3,6 +3,10 @@
   color: blue;
 }
 
+.center {
+  text-align: center;
+}
+
 #schedule-table {
   table-layout: fixed;
   width: 100%;
@@ -16,6 +20,24 @@
       border-right: 1px black solid;
     }
   }
+
+  div.planned-movie {
+    position: relative;
+    background-color: lightgreen;
+    color: black;
+    height: 30px;
+    cursor: grabbing;
+
+    i.delete-show {
+      position: absolute;
+      right: 4px;
+      top: 4px;
+    }
+  }
+
+  #draggerShadow {
+    opacity: 50%;
+  }
 }
 
 #schedule-movie-dragger {
@@ -26,5 +48,22 @@
   cursor: grabbing;
   overflow: hidden;
   text-align: center;
+  padding-left: 3px;
 }
 
+#research-progress-bar {
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+}
+
+div.research-block  {
+  cursor: pointer;
+  border: 1px black solid;
+  padding: 6px;
+  margin: 6px;
+
+  .active {
+    background-color: lightgreen;
+  }
+}
